# egotransfer

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DIRECT_BACKEND_INTEGRATION.md  RAILWAY_BUILD_FIX.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICKSTART.md  RAILWAY_ROOT_DIRECTORY_FIX.md  RAILWAY_TROUBLESHOOTING.md  README.md  main.py  pyproject.toml  railway.toml  video_hand_processor.py
backend/: .buildtrigger  .env.example  .railwayignore  Dockerfile  Hand_to_robot.py  app.py  aptfile  main.py  nixpacks.toml  pyproject.toml  railpack.toml  railway.json  railway.toml  requirements.txt  robot_playback_controller.py  setup.py  video_hand_processor.py
backend/migrations/: add_admin_column.sql  create_audit_logs_table.sql  run_migrations.py
backend/models/: database.py  schemas.py
backend/routes/: admin.py  admin_auth.py  ai_processing.py  auth.py  hand_processing.py  robot_control.py
backend/services/: ai_service.py  audit_service.py  hand_service.py  job_manager.py  robot_service.py  user_service.py  video_service.py
frontend/: .railwayignore  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: Auth.tsx  DetailedVideoAnalysis.tsx  GlassCard.tsx  Navigation.tsx  RobotControl.tsx  Settings.tsx  VideoAnalysis.tsx  VideoUpload.tsx
frontend/client/src/components/examples/: DetailedVideoAnalysis.tsx  (+5 more)
frontend/client/src/lib/: auth.tsx  config.ts  queryClient.ts
frontend/server/: routes.ts  storage.ts
frontend/shared/: schema.ts
