[project]
name = "dobotcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",

    # Robot Control
    "pydobot>=1.3.2",
    "pydobot2>=0.1.0",

    # Computer Vision & Hand Tracking
    "numpy==1.26.4",
    "opencv-python-headless==4.8.1.78",
    "mediapipe>=0.10.0,<0.11.0",

    # AI & Analysis
    "google-genai>=1.38.0",
    "python-dotenv>=1.0.0",

    # Authentication & OAuth
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0"
]
